archives: use ordered list for scoreboard

--- a/prologin/archives/templates/archives/finale-scoreboard.html
+++ b/prologin/archives/templates/archives/finale-scoreboard.html
@@ -16,7 +16,7 @@
 
 {% block content %}
   <h1>{% blocktrans with year=archive.year %}Final scoreboard for Prologin {{ year }} final{% endblocktrans %}</h1>
-  {% with archive.final.scoreboard as scoreboard %}
+  {% with archive.final.scoreboard as scoreboard and "1" as scoreboard_start %}
     {% include "archives/inline-scoreboard.html" %}
   {% endwith %}
 {% endblock %}
