--- a/prologin/archives/templates/archives/inline-scoreboard.html
+++ b/prologin/archives/templates/archives/inline-scoreboard.html
@@ -1,3 +1,3 @@
-<ul>{% for person in scoreboard %}
+<ol start="{{ scoreboard_start }}">{% for person in scoreboard %}
   {% include "archives/chunk-scoreboard.html" %}
-{% endfor %}</ul>
+{% endfor %}</ol>
