--- a/prologin/pages/templates/pages/about-qualification.html
+++ b/prologin/pages/templates/pages/about-qualification.html
@@ -13,7 +13,7 @@
 {% block content %}
 
 </div> {# <hack> end content_super container #}
-  <div class="bgcont bgcont-title" style="background-image: url({% static 'pages/img/qualif.jpg' %}); background-position: 0 50%;">
+  <div class="bgcont bgcont-title" style="background-image: url({% static 'pages/img/qualif.jpg' %}); background-position: 0 40%;">
     <div class="container presentation-body"><h1>{% trans "The qualification stage" %}</h1></div>
   </div>
 <div class="container"> {# </hack> #}
@@ -28,5 +28,10 @@ to address so far.{% endblocktrans %}</p>
 who represent the most effective way to publicize the competition.{% endblocktrans %}</p>
   <p>{% blocktrans %}Some years, the questionnaire is also published in various targeted computer magazines. For example,
 for the 2004 edition, 120'000 copies of the quiz were distributed on paper.{% endblocktrans %}</p>
+
+  <h3 id="no-epita">{% trans "Why are students from EPITA and EPITCH not allowed to compete?" %}</h3>
+  <p>{% blocktrans %}Prologin is registered as an association that is part of the EPITA engineering school. As such,
+  members of the school and other establishments belonging to their parent group (<em>IONIS Education</em>)
+  are not allowed to compete in the Prologin contest.{% endblocktrans %}</p>
 
 {% endblock %}
