contest: staff correction features (from branch staff-correction)
Squashed commit of the following:

commit b5725171892be17f6cae7c4351b8782e2fe9fd40
Author: Alexandre Macabies <web+git@zopieux.com>
Date:   Sun Dec 13 16:22:32 2015 +0100

    contest: correction: rework admin menu; warning if user presence is down

commit fd9fd87648cc40ff52ea4919e413e8e5bbf119cc
Author: Alexandre Macabies <web+git@zopieux.com>
Date:   Sun Nov 29 22:52:08 2015 +0100

    contest: correction: refactor *all* the things; mostly done

commit fb27e13c12f3e5a2bcd5391575c03079ba4143e7
Author: Alexandre Macabies <web+git@zopieux.com>
Date:   Sun Nov 29 04:54:52 2015 +0100

    contest: correction: mostly done but full of dirty hacks (WIP)

commit 39fefa28008f9e6573f6e1f980559f02eae7f21a
Author: Alexandre Macabies <web+git@zopieux.com>
Date:   Thu Nov 26 22:45:52 2015 +0100

    contest: correction: first features (WIP)

--- a/prologin/problems/templates/problems/problem.html
+++ b/prologin/problems/templates/problems/problem.html
@@ -9,7 +9,6 @@
   {% breadcrumb problem.title "training:problem" challenge.year challenge.event_type.name problem.name %}
 {% endblock breadcrumbs %}
 
-{% block body_tag %}data-spy="scroll" data-target="#problem-nav"{% endblock %}
 {% block title %}{{ problem.title }} – {% blocktrans with type=challenge.event_type|choiceenum_label year=challenge.year context "Problem title, eg. 2015 Qualification" %}{{ type }} {{ year }}{% endblocktrans %}{% endblock %}
 
 {% block content %}
@@ -175,7 +174,7 @@
     {% endif %}
     </div>
 
-    <div class="col-md-3" role="complementary">
+    <div class="col-md-3" role="complementary" id="problem-nav-col">
       <nav class="hidden-print hidden-xs hidden-sm sidebar-affix" id="problem-nav">
         <ul class="nav nav-pills nav-stacked">
           <li><a href="#statement">{% trans "Statement" %}</a></li>
@@ -191,25 +190,14 @@
 
 {% block extra_script %}
 {% if request.user.is_authenticated %}
+  <script type="text/javascript" charset="utf-8" src="{% static 'js/utils.js' %}"></script>
   <script type="text/javascript" charset="utf-8" src="{% static 'problems/lib/ace/src-min-noconflict/ace.js' %}"></script>
   <script type="text/javascript" charset="utf-8" src="{% static 'problems/lib/ace/src-min-noconflict/ext-themelist.js' %}"></script>
   <script type="text/javascript" charset="utf-8" src="{% static 'problems/js/code-editor.js' %}"></script>
 {% endif %}
   <script type="text/javascript">
   $(function() {
-    // Affix navigation
-    var $nav = $('#problem-nav');
-    $nav.affix({
-      offset: {
-        top: function () {
-          var c = $nav.offset().top - 20;
-          return this.top = c;
-        },
-        bottom: function() {
-          return this.bottom = $('footer').outerHeight(true);
-        }
-      }
-    });
+    $('#problem-nav').standardAffix({parent: '#problem-nav-col'});
   });
   </script>
 {% endblock %}
