about pages: fix minor typos; fix site-issues/#20

--- a/prologin/pages/templates/pages/about-qualification.html
+++ b/prologin/pages/templates/pages/about-qualification.html
@@ -29,7 +29,7 @@ who represent the most effective way to publicize the competition.{% endblocktra
   <p>{% blocktrans %}Some years, the questionnaire is also published in various targeted computer magazines. For example,
 for the 2004 edition, 120'000 copies of the quiz were distributed on paper.{% endblocktrans %}</p>
 
-  <h3 id="no-epita">{% trans "Why are students from EPITA and EPITCH not allowed to compete?" %}</h3>
+  <h3 id="no-epita">{% trans "Why are students from EPITA and EPITECH not allowed to compete?" %}</h3>
   <p>{% blocktrans %}Prologin is registered as an association that is part of the EPITA engineering school. As such,
   members of the school and other establishments belonging to their parent group (<em>IONIS Education</em>)
   are not allowed to compete in the Prologin contest.{% endblocktrans %}</p>
