--- a/prologin/mailing/templates/mailing/end_qualifications.body.text.html
+++ b/prologin/mailing/templates/mailing/end_qualifications.body.text.html
@@ -5,7 +5,7 @@ Comme tu le sais sûrement, les inscriptions pour l'édition 2016 du
 concours Prologin touchent à leur fin.
 
 Afin de te laisser le temps de finaliser ta soumission, nous avons
-décidé de repousser la date limite de soumission au 10 janvier à
+décidé de repousser la date limite de soumission au 8 janvier à
 23h42.
 
 Pour rappel, tu peux remplir le questionnaire à cette adresse :
@@ -13,13 +13,13 @@ https://prologin.org/contest/2016/qualification/
 
 N'hésite pas à soumettre dès maintenant les exercices que tu as
 résolus et à le faire régulièrement ! Cela n'entraîne aucune pénalité
-et t'évitera un stress de dernière minute, cela nous permettra
-également de suivre ton avancement. Si tu rencontres des difficultés
-pour résoudre un exercice, ou pour toute autre question sur le
-concours, tu peux demander de l'aide sur notre forum :
-http://prologin.org/forum ; sur notre salon IRC officiel (#prologin
-sur irc.freenode.net) ou encore nous envoyer un mail
-(info@prologin.org).
+pour la phase de séléction en ligne et t'évitera un stress de 
+dernière minute, cela nous permettra également de suivre ton 
+avancement. Si tu rencontres des difficultés pour résoudre un 
+exercice, ou pour toute autre question sur le concours, tu peux 
+demander de l'aide sur notre forum : http://prologin.org/forum ;
+sur notre salon IRC officiel (#prologin sur chat.freenode.net) ou 
+encore nous envoyer un mail (info@prologin.org).
 
 Nous te souhaitons bon courage et bonne chance pour cette édition !
 
@@ -34,7 +34,6 @@ http://twitter.com/prologin - http://facebook.com/prologin
 ----------------------------------------------------------------------
 
 
-Si vous ne souhaitez plus recevoir d'e-mail de Prologin, décochez la
-case « Autoriser Prologin à m'envoyer des e-mails » dans les
-paramètres de votre compte ({{ user.get_unsubscribe_url }}), ou contactez-nous.
+Si vous ne souhaitez plus recevoir d'e-mail de Prologin, tu peux cliquer
+sur le lien suivant : {{ user.get_unsubscribte_url }}
 {% endautoescape %}{% endspaceless %}
