mailing template: another fix

--- a/prologin/mailing/templates/mailing/end_qualifications.body.text.html
+++ b/prologin/mailing/templates/mailing/end_qualifications.body.text.html
@@ -34,6 +34,6 @@ http://twitter.com/prologin - http://facebook.com/prologin
 ----------------------------------------------------------------------
 
 
-Si vous ne souhaitez plus recevoir d'e-mail de Prologin, tu peux cliquer
+Si tu ne souhaites plus recevoir d'e-mail de Prologin, tu peux cliquer
 sur le lien suivant : {{ user.get_unsubscribte_url }}
 {% endautoescape %}{% endspaceless %}
