--- a/prologin/mailing/templates/mailing/end_qualifications.body.text.html
+++ b/prologin/mailing/templates/mailing/end_qualifications.body.text.html
@@ -29,11 +29,11 @@ Le président, Alexandre Bonnetain.
 * Prologin *
 Le Concours National d'Informatique
 14-16 rue Voltaire - 94270 Le Kremlin-Bicêtre - France
-association@prologin.org - http://prologin.org
-http://twitter.com/prologin - http://facebook.com/prologin
+association@prologin.org - https://prologin.org
+https://twitter.com/prologin - https://facebook.com/prologin
 ----------------------------------------------------------------------
 
 
 Si tu ne souhaites plus recevoir d'e-mail de Prologin, tu peux cliquer
-sur le lien suivant : {{ user.get_unsubscribte_url }}
+sur le lien suivant : {{ user.get_unsubscribe_url }}
 {% endautoescape %}{% endspaceless %}
