mailing template: last fix (let's hope)

--- a/prologin/mailing/templates/mailing/end_qualifications.body.text.html
+++ b/prologin/mailing/templates/mailing/end_qualifications.body.text.html
@@ -17,7 +17,7 @@ pour la phase de séléction en ligne et t'évitera un stress de
 dernière minute, cela nous permettra également de suivre ton 
 avancement. Si tu rencontres des difficultés pour résoudre un 
 exercice, ou pour toute autre question sur le concours, tu peux 
-demander de l'aide sur notre forum : http://prologin.org/forum ;
+demander de l'aide sur notre forum : https://prologin.org/forum ;
 sur notre salon IRC officiel (#prologin sur chat.freenode.net) ou 
 encore nous envoyer un mail (info@prologin.org).
 
